--- a/Cyclone_Final.Rmd
+++ b/Cyclone_Final.Rmd
@@ -1,76 +1,11 @@
-hdata$GarageFinish[is.na(hdata$GarageFinish)] <- "None"
-hdata$GarageFinish <- as.factor(hdata$GarageFinish)
-hdata$GarageQual <- as.character(hdata$GarageQual)
-hdata$GarageQual[is.na(hdata$GarageQual)] <- "None"
-hdata$GarageQual <- as.factor(hdata$GarageQual)
-hdata$GarageCond <- as.character(hdata$GarageCond)
-hdata$GarageCond[is.na(hdata$GarageCond)] <- "None"
-hdata$GarageCond <- as.factor(hdata$GarageCond)
-#MiscFeature: Miscellaneous feature not covered in other categories
-hdata$MiscFeature <- as.character(hdata$MiscFeature)
-hdata$MiscFeature[is.na(hdata$MiscFeature)] <- "None"
-hdata$MiscFeature <- as.factor(hdata$MiscFeature)
-# MasVnrType: Masonry veneer type
-hdata$MasVnrType <- as.character(hdata$MasVnrType)
-hdata$MasVnrType[is.na(hdata$MasVnrType)] <- "None"
-hdata$MasVnrType <- as.factor(hdata$MasVnrType)
-hdata$LogX1stFlrSF = log(hdata$X1stFlrSF + 1)
-hdata$LogX2ndFlrSF = log(hdata$X2ndFlrSF + 1)
-hdata$LogGrLivArea = log(hdata$GrLivArea + 1)
-hdata$LogTotalBsmtSF = log(hdata$TotalBsmtSF + 1)
-hdata$LogBsmtUnfSF = log(hdata$BsmtUnfSF + 1)
-hdata$LogWoodDeckSF = log(hdata$WoodDeckSF + 1)
-hdata$LogOpenPorchSF = log(hdata$OpenPorchSF + 1)
-hdata$LogX3SsnPorch = log(hdata$X3SsnPorch + 1)
-hdata$LogScreenPorch = log(hdata$ScreenPorch + 1)
-hdata$LogLotArea = log(hdata$LotArea + 1)
-hdata$LogLotFrontage = log(hdata$LotFrontage + 1)
-hdata$LogPoolArea = log(hdata$PoolArea + 1)
-hdata$LogGarageArea = log(hdata$GarageArea + 1)
-hdata$LogMasVnrArea = log(hdata$MasVnrArea + 1)
-hdata$ExterCondNum <- as.numeric(factor(hdata$ExterCond,
-levels = c("Ex","Gd","TA","Fa","Po"),
-labels = c(5,4,3,2,1), ordered = TRUE))
-hdata$HeatingQCNum <- as.numeric(factor(hdata$HeatingQC,
-levels = c("Ex", "Gd","TA", "Fa","Po"),
-labels = c(5,4,3,2,1) ,ordered = TRUE))
-hdata$CentralAirNum <- as.numeric(factor(hdata$CentralAir,
-levels = c("N", "Y"),
-labels = c(0,1) ,ordered = TRUE))
-hfit <- lm(LogSalePrice ~ .-LogSalePrice, data = lr_model2)
-summary(hfit)
-hdata$SalePrice = as.numeric(NA)
-hdata$lSalePrice = as.numeric(NA)
-hpred <- predict(hfit, interval = "predict", newdata = hdata, na.action = na.omit ) # na.action = ? goes here
-h_prediction <- data.frame(cbind(hdata$Id, exp(hpred[,1]))) # the exp() is the back transform
-names(h_prediction) <- c("ID", "SalePrice")
-h_prediction
-write.csv(h_prediction, file = "./housePred12.csv", row.names = FALSE)
-ols_step_both_p(home_reg2, prem = .05, details = FALSE)
-model_stepwise <- lm(LogSalePrice ~ OverallQual + LogGrLivArea + YearBuilt + LogLotArea +
-OverallCond + BedroomAbvGr + LogTotalBsmtSF + Fireplaces +
-LogGarageArea + HeatingQCNum + LogScreenPorch + LogWoodDeckSF, data = lr_model2)
-summary(model_stepwise)
-hdata$SalePrice = as.numeric(NA)
-hdata$lSalePrice = as.numeric(NA)
-swPred <- predict(model_stepwise, interval = "predict", newdata = hdata, na.action = na.omit)
-swPrediction <- data.frame(cbind(hdata$Id, exp(swPred[,1])))
-names(swPrediction) <- c("ID", "SalePrice")
-swPrediction
-write.csv(swPrediction, file = "./stepwisePred.csv", row.names = FALSE)
-# library(epiR)
-# data <- as.table(matrix(c(670,202,74,640), nrow = 2, byrow = TRUE))
-# rval <- epi.tests(data, conf.level = 0.95)
-# print(rval)
-model_fit_stats <- function(linear.model) {
-r.sqr <- summary(linear.model)$r.squared
-adj.r.sqr <- summary(linear.model)$adj.r.squared
-pre.r.sqr <- pred_r_squared(linear.model)
-PRESS <- PRESS(linear.model)
-return.df <- data.frame(r.squared = r.sqr, adj.r.squared = adj.r.sqr, pred.r.squared = pre.r.sqr, press = PRESS)
-return(return.df)
-}
-model_fit_stats(model_stepwise)
+---
+title: "Cyclone Final"
+author: "Joey Hernandez"
+date: "2022-12-11"
+output: html_document
+---
+Libraries
+```{r, include=FALSE}
 library(naniar)
 library(tidyverse)
 library(ggplot2)
@@ -126,387 +61,584 @@ library(lmtest)
 library(sjPlot)
 library(sjmisc)
 library(sjlabelled)
+```
+
+Datasets
+```{r, include=FALSE}
 #AmesHouesingDataFrame = data.frame(read.csv("C:/SMU MS Data Science/StatisticalFoundations6371/AmesHousePricing/train.csv"))
 #AmesHouesingTestDataFrame = data.frame(read.csv("C:/SMU MS Data Science/StatisticalFoundations6371/AmesHousePricing/test.csv"))
+
 AmesHouesingDataFrame <- read.csv("C:/Users/Joey/Desktop/stat project/AmesHousePricing/train.csv")
 AmesHouesingDataFrame_test<-read.csv("C:/Users/Joey/Desktop/house-prices-advanced-regression-techniques/test.csv")
+
 #AmesHouesingDataFrame <- read.csv("C:/Users/nicol/OneDrive/Desktop/train1.csv")
 #AmesHouesingDataFrame <- read.csv("C:/Users/nicol/OneDrive/Desktop/test1.csv")
+```
+
+Log Transformations
+```{r, include=FALSE}
 # Perform log transformations on columns that require it which was determined from the various *EDA.Rmd files and listed in Notes.txt
+
 AmesHouesingDataFrame$LogSalePrice = log(AmesHouesingDataFrame$SalePrice)
+
 AmesHouesingDataFrame$LogX1stFlrSF = log(AmesHouesingDataFrame$X1stFlrSF + 1)
 AmesHouesingDataFrame$LogX2ndFlrSF = log(AmesHouesingDataFrame$X2ndFlrSF + 1)
 AmesHouesingDataFrame$LogGrLivArea = log(AmesHouesingDataFrame$GrLivArea + 1)
+
 AmesHouesingDataFrame$LogTotalBsmtSF = log(AmesHouesingDataFrame$TotalBsmtSF + 1)
 AmesHouesingDataFrame$LogBsmtUnfSF = log(AmesHouesingDataFrame$BsmtUnfSF + 1)
+
 AmesHouesingDataFrame$LogWoodDeckSF = log(AmesHouesingDataFrame$WoodDeckSF + 1)
 AmesHouesingDataFrame$LogOpenPorchSF = log(AmesHouesingDataFrame$OpenPorchSF + 1)
 AmesHouesingDataFrame$LogX3SsnPorch = log(AmesHouesingDataFrame$X3SsnPorch + 1)
 AmesHouesingDataFrame$LogScreenPorch = log(AmesHouesingDataFrame$ScreenPorch + 1)
+
 AmesHouesingDataFrame$LogLotArea = log(AmesHouesingDataFrame$LotArea + 1)
 AmesHouesingDataFrame$LogLotFrontage = log(AmesHouesingDataFrame$LotFrontage + 1)
+
 AmesHouesingDataFrame$LogPoolArea = log(AmesHouesingDataFrame$PoolArea + 1)
+
 AmesHouesingDataFrame$LogGarageArea = log(AmesHouesingDataFrame$GarageArea + 1)
+
 AmesHouesingDataFrame$LogMasVnrArea = log(AmesHouesingDataFrame$MasVnrArea + 1)
+```
+
+Addressing NA Values
+```{r include=FALSE}
 # The data contain many NA values. These NA values are not necessarily missing data, but can be thought of as
 # a missing feature of certain homes.
+
 AmesHouesingDataFrame$Fence <- as.character(AmesHouesingDataFrame$Fence)
 AmesHouesingDataFrame$Fence[is.na(AmesHouesingDataFrame$Fence)] <- "None"
 AmesHouesingDataFrame$Fence <- as.factor(AmesHouesingDataFrame$Fence)
+
 # MSZoning: Identifies the general zoning classification of the sale.
 AmesHouesingDataFrame$MSZoning <- as.character(AmesHouesingDataFrame$MSZoning)
 AmesHouesingDataFrame$MSZoning[is.na(AmesHouesingDataFrame$MSZoning)] <- "None"
 AmesHouesingDataFrame$MSZoning <- as.factor(AmesHouesingDataFrame$MSZoning)
+
 # Exterior1st: Exterior covering on house
 AmesHouesingDataFrame$Exterior1st <- as.character(AmesHouesingDataFrame$Exterior1st)
 AmesHouesingDataFrame$Exterior1st[is.na(AmesHouesingDataFrame$Exterior1st)] <- "None"
 AmesHouesingDataFrame$Exterior1st <- as.factor(AmesHouesingDataFrame$Exterior1st)
+
 #Exterior2nd: Exterior covering on house (if more than one material)
 AmesHouesingDataFrame$Exterior2nd <- as.character(AmesHouesingDataFrame$Exterior2nd)
 AmesHouesingDataFrame$Exterior2nd[is.na(AmesHouesingDataFrame$Exterior2nd)] <- "None"
 AmesHouesingDataFrame$Exterior2nd <- as.factor(AmesHouesingDataFrame$Exterior2nd)
+
 AmesHouesingDataFrame$GarageType <- as.character(AmesHouesingDataFrame$GarageType)
 AmesHouesingDataFrame$GarageType[is.na(AmesHouesingDataFrame$GarageType)] <- "None"
 AmesHouesingDataFrame$GarageType <- as.factor(AmesHouesingDataFrame$GarageType)
+                                              
 AmesHouesingDataFrame$FireplaceQu <- as.character(AmesHouesingDataFrame$FireplaceQu)
 AmesHouesingDataFrame$FireplaceQu[is.na(AmesHouesingDataFrame$FireplaceQu)] <- "None"
 AmesHouesingDataFrame$FireplaceQu <- as.factor(AmesHouesingDataFrame$FireplaceQu)
+
 AmesHouesingDataFrame$Alley <- as.character(AmesHouesingDataFrame$Alley)
 AmesHouesingDataFrame$Alley[is.na(AmesHouesingDataFrame$Alley)] <- "None"
 AmesHouesingDataFrame$Alley <- as.factor(AmesHouesingDataFrame$Alley)
+
 AmesHouesingDataFrame$BsmtQual <- as.character(AmesHouesingDataFrame$BsmtQual)
 AmesHouesingDataFrame$BsmtQual[is.na(AmesHouesingDataFrame$BsmtQual)] <- "None"
 AmesHouesingDataFrame$BsmtQual <- as.factor(AmesHouesingDataFrame$BsmtQual)
+
 AmesHouesingDataFrame$BsmtCond <- as.character(AmesHouesingDataFrame$BsmtCond)
 AmesHouesingDataFrame$BsmtCond[is.na(AmesHouesingDataFrame$BsmtCond)] <- "None"
 AmesHouesingDataFrame$BsmtCond <- as.factor(AmesHouesingDataFrame$BsmtCond)
+
 AmesHouesingDataFrame$BsmtExposure <- as.character(AmesHouesingDataFrame$BsmtExposure)
 AmesHouesingDataFrame$BsmtExposure[is.na(AmesHouesingDataFrame$BsmtExposure)] <- "None"
 AmesHouesingDataFrame$BsmtExposure <- as.factor(AmesHouesingDataFrame$BsmtExposure)
+
 AmesHouesingDataFrame$BsmtFinType1 <- as.character(AmesHouesingDataFrame$BsmtFinType1)
 AmesHouesingDataFrame$BsmtFinType1[is.na(AmesHouesingDataFrame$BsmtFinType1)] <- "None"
 AmesHouesingDataFrame$BsmtFinType1 <- as.factor(AmesHouesingDataFrame$BsmtFinType1)
+
 AmesHouesingDataFrame$BsmtFinType2 <- as.character(AmesHouesingDataFrame$BsmtFinType2)
 AmesHouesingDataFrame$BsmtFinType2[is.na(AmesHouesingDataFrame$BsmtFinType2)] <- "None"
 AmesHouesingDataFrame$BsmtFinType2<- as.factor(AmesHouesingDataFrame$BsmtFinType2)
+
 AmesHouesingDataFrame$GarageFinish <- as.character(AmesHouesingDataFrame$GarageFinish)
 AmesHouesingDataFrame$GarageFinish[is.na(AmesHouesingDataFrame$GarageFinish)] <- "None"
 AmesHouesingDataFrame$GarageFinish <- as.factor(AmesHouesingDataFrame$GarageFinish)
+
 AmesHouesingDataFrame$GarageQual <- as.character(AmesHouesingDataFrame$GarageQual)
 AmesHouesingDataFrame$GarageQual[is.na(AmesHouesingDataFrame$GarageQual)] <- "None"
 AmesHouesingDataFrame$GarageQual <- as.factor(AmesHouesingDataFrame$GarageQual)
+
 AmesHouesingDataFrame$GarageCond <- as.character(AmesHouesingDataFrame$GarageCond)
 AmesHouesingDataFrame$GarageCond[is.na(AmesHouesingDataFrame$GarageCond)] <- "None"
 AmesHouesingDataFrame$GarageCond <- as.factor(AmesHouesingDataFrame$GarageCond)
+
 #MiscFeature: Miscellaneous feature not covered in other categories
 AmesHouesingDataFrame$MiscFeature <- as.character(AmesHouesingDataFrame$MiscFeature)
 AmesHouesingDataFrame$MiscFeature[is.na(AmesHouesingDataFrame$MiscFeature)] <- "None"
-AmesHouesingDataFrame$MiscFeature <- as.factor(AmesHouesingDataFrame$MiscFeature)
+AmesHouesingDataFrame$MiscFeature <- as.factor(AmesHouesingDataFrame$MiscFeature)                               
+
 # MasVnrType: Masonry veneer type
 AmesHouesingDataFrame$MasVnrType <- as.character(AmesHouesingDataFrame$MasVnrType)
 AmesHouesingDataFrame$MasVnrType[is.na(AmesHouesingDataFrame$MasVnrType)] <- "None"
 AmesHouesingDataFrame$MasVnrType <- as.factor(AmesHouesingDataFrame$MasVnrType)
+```
+
+Numerical Encoding
+```{r}
 # Numerical Encoding so that we can explore correlation:
+
 AmesHouesingDataFrame$ExterCondNum <- as.numeric(factor(AmesHouesingDataFrame$ExterCond,
-levels = c("Ex", "Fa", "Gd", "TA", "Po"),
-labels = c(5,2,4,3,1), ordered = TRUE))
+                                                        levels = c("Ex", "Fa", "Gd", "TA", "Po"),
+                                                        labels = c(5,2,4,3,1), ordered = TRUE))
 AmesHouesingDataFrame$HeatingQCNum <- as.numeric(factor(AmesHouesingDataFrame$HeatingQC,
-levels = c("Ex", "Fa", "Gd", "TA", "Po"),
-labels = c(5,2,4,3,1), ordered = TRUE))
+                                                        levels = c("Ex", "Fa", "Gd", "TA", "Po"),
+                                                        labels = c(5,2,4,3,1), ordered = TRUE))
 AmesHouesingDataFrame$CentralAirNum <- as.numeric(factor(AmesHouesingDataFrame$CentralAir,
-levels = c("N", "Y"),
-labels = c(0,1), ordered = TRUE))
+                                                         levels = c("N", "Y"),
+                                                         labels = c(0,1), ordered = TRUE))
+
+
 AmesHouesingDataFrame$LotShapeNum <- as.numeric(factor(AmesHouesingDataFrame$LotShape,
-levels = c("Reg", "IR1", "IR2", "IR3"),
-labels = c(4,3,2,1), ordered = TRUE))
+                                                        levels = c("Reg", "IR1", "IR2", "IR3"),
+                                                        labels = c(4,3,2,1), ordered = TRUE))
+
 AmesHouesingDataFrame$LandContourNum <- as.numeric(factor(AmesHouesingDataFrame$LandContour,
-levels = c("Lvl", "Bnk", "HLS", "Low"),
-labels = c(4,3,2,1), ordered = TRUE))
+                                                        levels = c("Lvl", "Bnk", "HLS", "Low"),
+                                                        labels = c(4,3,2,1), ordered = TRUE))
+
 AmesHouesingDataFrame$LotConfigNum <- as.numeric(factor(AmesHouesingDataFrame$LotConfig,
-levels = c("Inside",
-"Corner",
-"CulDSac","FR2",
-"FR3"),
-labels = c(5,4,3,2,1), ordered = TRUE))
+                                                         levels = c("Inside",
+                                                                    "Corner",
+                                                                    "CulDSac","FR2",
+                                                                    "FR3"),
+                                                         labels = c(5,4,3,2,1), ordered = TRUE))
+
 AmesHouesingDataFrame$LandSlopeNum <- as.numeric(factor(AmesHouesingDataFrame$LandSlope,
-levels = c("Gtl", "Mod", "Sev"),
-labels = c(3,2,1),
-ordered = TRUE))
+                                                     levels = c("Gtl", "Mod", "Sev"),
+                                                     labels = c(3,2,1),
+                                                     ordered = TRUE))
+
+```
+
+Outlier Handling
+```{r}
 # AmesHouesingDataFrame
 Outliers = AmesHouesingDataFrame[order(-AmesHouesingDataFrame$GrLivArea),]
 Outliers = Outliers[1:2,]
 # Outliers
 AmesHouesingDataFrame = AmesHouesingDataFrame[!(AmesHouesingDataFrame$Id=="524" | AmesHouesingDataFrame$Id=="1299"),]
+
+```
+
+Setting up Test Data for Predictions
+```{r}
+
+
+```
+
+
+
+
+Feature Selection for Custom Model
+```{r}
 custom_var = c('LogSalePrice','OverallQual','OverallCond','YearBuilt',
-'ExterCondNum','LogTotalBsmtSF','HeatingQCNum',
-'BedroomAbvGr','Fireplaces', 'LogGarageArea',
-"LogGrLivArea","LogWoodDeckSF","LogScreenPorch","LogLotArea")
+              'ExterCondNum','LogTotalBsmtSF','HeatingQCNum', 
+              'BedroomAbvGr','Fireplaces', 'LogGarageArea', 
+              "LogGrLivArea","LogWoodDeckSF","LogScreenPorch","LogLotArea")
+
 custom_model = AmesHouesingDataFrame[,custom_var]
+
 set.seed(4)
 train.index = sample(c(1:dim(custom_model)[1]), dim(custom_model)[1]*0.8)
 custom_model_train = custom_model[train.index,]
 custom_model_test = custom_model[-train.index,]
+
 home_fit = lm(LogSalePrice~.-LogSalePrice, data = custom_model_train)
 # summary(home_regression)
+
 pred1 = predict(home_fit,
-custom_model_test,
-type = "response")
+                custom_model_test,
+                type = "response")
+
 residuals = custom_model_test$LogSalePrice - pred1
+
 home_fit_prediction = data.frame("Predicted" = pred1,
-"Actual" = custom_model_test$LogSalePrice,
-"Residual" = residuals)
+                                  "Actual" = custom_model_test$LogSalePrice,
+                                  "Residual" = residuals)
+
 # returns ME-RMSE-MAE-MPE-MAPE
 #accuracy(pred1, lr_model_test$LogSalePrice)
+
 # note "predict" this returns fit/lwr/upr
-#pred2 = predict(home_regression, interval = "predict", newdata = lr_model_test)
+#pred2 = predict(home_regression, interval = "predict", newdata = lr_model_test) 
 # summary(pred2)
+
 #stargazer(home_regression, type = 'text')
+
 #car::vif(home_regression)
+
+```
+
+```{r}
 hdata <- read.csv("C:/Users/Joey/Desktop/house-prices-advanced-regression-techniques/test.csv",header = TRUE)
 #hdata <- read.csv("C:/SMU MS Data Science/StatisticalFoundations6371/AmesHousePricing/test.csv",header = TRUE)
+
 # The data contain many NA values. These NA values are not necessarily missing data, but can be thought of as
 # a missing feature of certain homes.
+
 hdata$Fence <- as.character(hdata$Fence)
 hdata$Fence[is.na(hdata$Fence)] <- "None"
 hdata$Fence <- as.factor(hdata$Fence)
+
 # MSZoning: Identifies the general zoning classification of the sale.
 hdata$MSZoning <- as.character(hdata$MSZoning)
 hdata$MSZoning[is.na(hdata$MSZoning)] <- "None"
 hdata$MSZoning <- as.factor(hdata$MSZoning)
+
 # Exterior1st: Exterior covering on house
 hdata$Exterior1st <- as.character(hdata$Exterior1st)
 hdata$Exterior1st[is.na(hdata$Exterior1st)] <- "None"
 hdata$Exterior1st <- as.factor(hdata$Exterior1st)
+
 #Exterior2nd: Exterior covering on house (if more than one material)
 hdata$Exterior2nd <- as.character(hdata$Exterior2nd)
 hdata$Exterior2nd[is.na(hdata$Exterior2nd)] <- "None"
 hdata$Exterior2nd <- as.factor(hdata$Exterior2nd)
+
 hdata$GarageType <- as.character(hdata$GarageType)
 hdata$GarageType[is.na(hdata$GarageType)] <- "None"
 hdata$GarageType <- as.factor(hdata$GarageType)
+                                              
 hdata$FireplaceQu <- as.character(hdata$FireplaceQu)
 hdata$FireplaceQu[is.na(hdata$FireplaceQu)] <- "None"
 hdata$FireplaceQu <- as.factor(hdata$FireplaceQu)
+
 hdata$Alley <- as.character(hdata$Alley)
 hdata$Alley[is.na(hdata$Alley)] <- "None"
 hdata$Alley <- as.factor(hdata$Alley)
+
 hdata$BsmtCond <- as.character(hdata$BsmtCond)
 hdata$BsmtCond[is.na(hdata$BsmtCond)] <- "None"
 hdata$BsmtCond <- as.factor(hdata$BsmtCond)
+
 hdata$BsmtExposure <- as.character(hdata$BsmtExposure)
 hdata$BsmtExposure[is.na(hdata$BsmtExposure)] <- "None"
 hdata$BsmtExposure <- as.factor(hdata$BsmtExposure)
+
 hdata$BsmtFinType1 <- as.character(hdata$BsmtFinType1)
 hdata$BsmtFinType1[is.na(hdata$BsmtFinType1)] <- "None"
 hdata$BsmtFinType1 <- as.factor(hdata$BsmtFinType1)
+
 hdata$BsmtFinType2 <- as.character(hdata$BsmtFinType2)
 hdata$BsmtFinType2[is.na(hdata$BsmtFinType2)] <- "None"
 hdata$BsmtFinType2<- as.factor(hdata$BsmtFinType2)
+
 hdata$GarageFinish <- as.character(hdata$GarageFinish)
 hdata$GarageFinish[is.na(hdata$GarageFinish)] <- "None"
 hdata$GarageFinish <- as.factor(hdata$GarageFinish)
+
 hdata$GarageQual <- as.character(hdata$GarageQual)
 hdata$GarageQual[is.na(hdata$GarageQual)] <- "None"
 hdata$GarageQual <- as.factor(hdata$GarageQual)
+
 hdata$GarageCond <- as.character(hdata$GarageCond)
 hdata$GarageCond[is.na(hdata$GarageCond)] <- "None"
 hdata$GarageCond <- as.factor(hdata$GarageCond)
+
 hdata$MiscFeature <- as.character(hdata$MiscFeature)
 hdata$MiscFeature[is.na(hdata$MiscFeature)] <- "None"
-hdata$MiscFeature <- as.factor(hdata$MiscFeature)
+hdata$MiscFeature <- as.factor(hdata$MiscFeature)                               
+
 hdata$MasVnrType <- as.character(hdata$MasVnrType)
 hdata$MasVnrType[is.na(hdata$MasVnrType)] <- "None"
 hdata$MasVnrType <- as.factor(hdata$MasVnrType)
+
 hdata$LogX1stFlrSF = log(hdata$X1stFlrSF + 1)
 hdata$LogX2ndFlrSF = log(hdata$X2ndFlrSF + 1)
 hdata$LogGrLivArea = log(hdata$GrLivArea + 1)
+
 hdata$LogTotalBsmtSF = log(hdata$TotalBsmtSF + 1)
 hdata$LogBsmtUnfSF = log(hdata$BsmtUnfSF + 1)
+
 hdata$LogWoodDeckSF = log(hdata$WoodDeckSF + 1)
 hdata$LogOpenPorchSF = log(hdata$OpenPorchSF + 1)
 hdata$LogX3SsnPorch = log(hdata$X3SsnPorch + 1)
 hdata$LogScreenPorch = log(hdata$ScreenPorch + 1)
+
 hdata$LogLotArea = log(hdata$LotArea + 1)
 hdata$LogLotFrontage = log(hdata$LotFrontage + 1)
+
 hdata$LogPoolArea = log(hdata$PoolArea + 1)
+
 hdata$LogGarageArea = log(hdata$GarageArea + 1)
+
 hdata$LogMasVnrArea = log(hdata$MasVnrArea + 1)
+
 hdata$ExterCondNum <- as.numeric(factor(hdata$ExterCond,
-levels = c("Ex","Gd","TA","Fa","Po"),
-labels = c(5,4,3,2,1), ordered = TRUE))
-hdata$HeatingQCNum <- as.numeric(factor(hdata$HeatingQC,
-levels = c("Ex", "Gd","TA", "Fa","Po"),
-labels = c(5,4,3,2,1) ,ordered = TRUE))
-hdata$CentralAirNum <- as.numeric(factor(hdata$CentralAir,
-levels = c("N", "Y"),
-labels = c(0,1) ,ordered = TRUE))
+                                                levels = c("Ex","Gd","TA","Fa","Po"),
+                                                labels = c(5,4,3,2,1), ordered = TRUE))
+
+hdata$HeatingQCNum <- as.numeric(factor(hdata$HeatingQC, 
+                                  levels = c("Ex", "Gd","TA", "Fa","Po"),
+                                  labels = c(5,4,3,2,1) ,ordered = TRUE))
+
+hdata$CentralAirNum <- as.numeric(factor(hdata$CentralAir, 
+                                  levels = c("N", "Y"),
+                                  labels = c(0,1) ,ordered = TRUE))
+
+
 hfit <- lm(LogSalePrice ~ .-LogSalePrice, data = custom_model)
+
 hdata$SalePrice = as.numeric(NA)
 hdata$lSalePrice = as.numeric(NA)
+
 hpred <- predict(hfit, interval = "predict", newdata = hdata, na.action = na.omit )
-h_prediction <- data.frame(cbind(hdata$Id, exp(hpred[,1]))) # the exp() is the back transform
+
+h_prediction <- data.frame(cbind(hdata$Id, exp(hpred[,1]))) # the exp() is the back transform 
+
 names(h_prediction) <- c("ID", "SalePrice")
+
 #write.csv(h_prediction, file = "./housePredictions.csv", row.names = FALSE)
+
 # kaggle .28941
 # CV PRESS 28.23967
 # ADJ. R-SQUARE .8814423
+```
+
+
+
+Model Selection Methods : Forward Selection
+```{r}
 # ols_step_forward_p(home_fit, details = FALSE)
 #
 # var selected by forward selection methods
+
 forward_var <- c("LogSalePrice","OverallQual","LogGrLivArea","YearBuilt","LogLotArea",
-"OverallCond","BedroomAbvGr","LogTotalBsmtSF",
-"Fireplaces","LogGarageArea","HeatingQCNum","LogScreenPorch",
-"LogWoodDeckSF","CentralAirNum","TotRmsAbvGrd","KitchenAbvGr",
-"LogMasVnrArea","YrSold")
+                 "OverallCond","BedroomAbvGr","LogTotalBsmtSF",
+                 "Fireplaces","LogGarageArea","HeatingQCNum","LogScreenPorch",
+                 "LogWoodDeckSF","CentralAirNum","TotRmsAbvGrd","KitchenAbvGr",
+                 "LogMasVnrArea","YrSold")
+
 lr_model_forw = AmesHouesingDataFrame[,forward_var]
+
 model_forward <- lm(LogSalePrice ~ OverallQual+LogGrLivArea+YearBuilt+
-LogLotArea + OverallCond +BedroomAbvGr+
-LogTotalBsmtSF + Fireplaces + LogGarageArea +
-HeatingQCNum +LogScreenPorch + LogWoodDeckSF+
-CentralAirNum + TotRmsAbvGrd + KitchenAbvGr +
-LogMasVnrArea + YrSold, data = lr_model_forw)
+                      LogLotArea + OverallCond +BedroomAbvGr+
+                      LogTotalBsmtSF + Fireplaces + LogGarageArea +
+                      HeatingQCNum +LogScreenPorch + LogWoodDeckSF+
+                      CentralAirNum + TotRmsAbvGrd + KitchenAbvGr + 
+                      LogMasVnrArea + YrSold, data = lr_model_forw)
+
+
 hdata$SalePrice = as.numeric(NA)
 hdata$lSalePrice = as.numeric(NA)
 FWPred <- predict(model_forward, interval = "predict", newdata = hdata, na.action = na.omit)
+
 FWPrediction <- data.frame(cbind(hdata$Id, exp(FWPred[,1])))
+
 names(FWPrediction) <- c("ID", "SalePrice")
+
 # write.csv(FWPrediction, file = "./forwardPred.csv", row.names = FALSE)
-# KAGGLE .42961
+# KAGGLE .42961 
 # R^2 .8823582
 # adj. R^2 .8809616
 # pred. R^2 .8788232
 # CV PRESS 28.0415
+```
+
+Forward Selection Performance Stats:
+```{r}
 # FORWARD MODEL STATS
+
 pred_r_squared <- function(linear.model) {
-#' Use anova() to get the sum of squares for the linear model
-lm.anova <- anova(linear.model)
-#' Calculate the total sum of squares
-tss <- sum(lm.anova$'Sum Sq')
-# Calculate the predictive R^2
-pred.r.squared <- 1-PRESS(linear.model)/(tss)
-return(pred.r.squared)
+  #' Use anova() to get the sum of squares for the linear model
+  lm.anova <- anova(linear.model)
+  #' Calculate the total sum of squares
+  tss <- sum(lm.anova$'Sum Sq')
+  # Calculate the predictive R^2
+  pred.r.squared <- 1-PRESS(linear.model)/(tss)
+  
+  return(pred.r.squared)
 }
+
+
 PRESS <- function(linear.model) {
-#' calculate the predictive residuals
-pr <- residuals(linear.model)/(1-lm.influence(linear.model)$hat)
-#' calculate the PRESS
-PRESS <- sum(pr^2)
-return(PRESS)
+  #' calculate the predictive residuals
+  pr <- residuals(linear.model)/(1-lm.influence(linear.model)$hat)
+  #' calculate the PRESS
+  PRESS <- sum(pr^2)
+  
+  return(PRESS)
 }
+
+
 model_fit_stats <- function(linear.model) {
-r.sqr <- summary(linear.model)$r.squared
-adj.r.sqr <- summary(linear.model)$adj.r.squared
-pre.r.sqr <- pred_r_squared(linear.model)
-PRESS <- PRESS(linear.model)
-return.df <- data.frame(r.squared = r.sqr, adj.r.squared = adj.r.sqr, pred.r.squared = pre.r.sqr, press = PRESS)
-return(return.df)
+  r.sqr <- summary(linear.model)$r.squared
+  adj.r.sqr <- summary(linear.model)$adj.r.squared
+  pre.r.sqr <- pred_r_squared(linear.model)
+  PRESS <- PRESS(linear.model)
+  return.df <- data.frame(r.squared = r.sqr, adj.r.squared = adj.r.sqr, pred.r.squared = pre.r.sqr, press = PRESS)
+  return(return.df)
 }
 pred_r_squared(model_forward)
+
 PRESS(model_forward)
+
 AIC(model_forward)
+
 model_fit_stats(model_forward)
+
+```
+
+Model Selection Methods : Stepwise Selection
+```{r}
 #ols_step_both_p(home_reg2,details = FALSE)
+
 step_wise_var <- c("LogSalePrice","OverallQual","LogGrLivArea","YearBuilt",
-"LogLotArea","OverallCond","BedroomAbvGr",
-"LogTotalBsmtSF","Fireplaces","LogGarageArea",
-"HeatingQCNum", "LogScreenPorch",
-"LogWoodDeckSF","CentralAirNum","ExterCondNum")
+                   "LogLotArea","OverallCond","BedroomAbvGr",
+                   "LogTotalBsmtSF","Fireplaces","LogGarageArea",
+                   "HeatingQCNum", "LogScreenPorch",
+                   "LogWoodDeckSF","CentralAirNum","ExterCondNum")
+
 lr_model_sw = AmesHouesingDataFrame[,step_wise_var]
+
 model_stepwise <- lm(LogSalePrice ~ OverallQual + LogGrLivArea + YearBuilt + LogLotArea +
-OverallCond + BedroomAbvGr + LogTotalBsmtSF + Fireplaces +
-LogGarageArea + HeatingQCNum + LogScreenPorch + LogWoodDeckSF +
-CentralAirNum + ExterCondNum , data = lr_model_sw)
+                       OverallCond + BedroomAbvGr + LogTotalBsmtSF + Fireplaces +
+                       LogGarageArea + HeatingQCNum + LogScreenPorch + LogWoodDeckSF +
+                       CentralAirNum + ExterCondNum , data = lr_model_sw)
+
 # summary(model_stepwise)
 hdata$SalePrice = as.numeric(NA)
 hdata$lSalePrice = as.numeric(NA)
 swPred <- predict(model_stepwise, interval = "predict", newdata = hdata, na.action = na.omit)
+
 swPrediction <- data.frame(cbind(hdata$Id, exp(swPred[,1])))
+
 names(swPrediction) <- c("ID", "SalePrice")
+
 # write.csv(swPrediction, file = "./SWPred.csv", row.names = FALSE)
 # kaggle score .28948
 # rsquare .8811709
 # adj. r square .8801841
 # pred r square .878761
 # cv press 28.22304
-# STEP WISE STATS
+```
+
+Stepwise Selection Performance Stats:
+```{r}
+# STEP WISE STATS 
+
 pred_r_squared <- function(linear.model) {
-#' Use anova() to get the sum of squares for the linear model
-lm.anova <- anova(linear.model)
-#' Calculate the total sum of squares
-tss <- sum(lm.anova$'Sum Sq')
-# Calculate the predictive R^2
-pred.r.squared <- 1-PRESS(linear.model)/(tss)
-return(pred.r.squared)
+  #' Use anova() to get the sum of squares for the linear model
+  lm.anova <- anova(linear.model)
+  #' Calculate the total sum of squares
+  tss <- sum(lm.anova$'Sum Sq')
+  # Calculate the predictive R^2
+  pred.r.squared <- 1-PRESS(linear.model)/(tss)
+  
+  return(pred.r.squared)
 }
+
 PRESS <- function(linear.model) {
-#' calculate the predictive residuals
-pr <- residuals(linear.model)/(1-lm.influence(linear.model)$hat)
-#' calculate the PRESS
-PRESS <- sum(pr^2)
-return(PRESS)
+  #' calculate the predictive residuals
+  pr <- residuals(linear.model)/(1-lm.influence(linear.model)$hat)
+  #' calculate the PRESS
+  PRESS <- sum(pr^2)
+  
+  return(PRESS)
 }
+
 model_fit_stats <- function(linear.model) {
-r.sqr <- summary(linear.model)$r.squared
-adj.r.sqr <- summary(linear.model)$adj.r.squared
-pre.r.sqr <- pred_r_squared(linear.model)
-PRESS <- PRESS(linear.model)
-return.df <- data.frame(r.squared = r.sqr, adj.r.squared = adj.r.sqr, pred.r.squared = pre.r.sqr, press = PRESS)
-return(return.df)
+  r.sqr <- summary(linear.model)$r.squared
+  adj.r.sqr <- summary(linear.model)$adj.r.squared
+  pre.r.sqr <- pred_r_squared(linear.model)
+  PRESS <- PRESS(linear.model)
+  return.df <- data.frame(r.squared = r.sqr, adj.r.squared = adj.r.sqr, pred.r.squared = pre.r.sqr, press = PRESS)
+  return(return.df)
 }
 pred_r_squared(model_stepwise)
+
 PRESS(model_stepwise)
+
 AIC(model_stepwise)
+
 model_fit_stats(model_stepwise)
+
+```
+
+Model Selection Methods : Backward Selection
+```{r}
 bk_var <- c('LogSalePrice','OverallQual','OverallCond','YearBuilt',
-'ExterCondNum','LogTotalBsmtSF','HeatingQCNum',
-'CentralAirNum','BedroomAbvGr','KitchenAbvGr',
-'TotRmsAbvGrd','Fireplaces', 'LogGarageArea',
-'YrSold', "LogGrLivArea","LogWoodDeckSF",
-"LogScreenPorch","LogLotArea","LogMasVnrArea")
+            'ExterCondNum','LogTotalBsmtSF','HeatingQCNum',
+            'CentralAirNum','BedroomAbvGr','KitchenAbvGr',
+            'TotRmsAbvGrd','Fireplaces', 'LogGarageArea',
+            'YrSold', "LogGrLivArea","LogWoodDeckSF",
+            "LogScreenPorch","LogLotArea","LogMasVnrArea")
+
 lr_model_bk = AmesHouesingDataFrame[,bk_var]
+
 model_bk <- lm(LogSalePrice ~ OverallQual + OverallCond + YearBuilt + ExterCondNum +
-LogTotalBsmtSF+ HeatingQCNum+ CentralAirNum+
-BedroomAbvGr + KitchenAbvGr + TotRmsAbvGrd + Fireplaces +
-LogGarageArea + YrSold + LogGrLivArea + LogWoodDeckSF +LogScreenPorch +
-LogLotArea + LogMasVnrArea, data = lr_model_bk)
+                       LogTotalBsmtSF+ HeatingQCNum+ CentralAirNum+
+                 BedroomAbvGr + KitchenAbvGr + TotRmsAbvGrd + Fireplaces +
+                 LogGarageArea + YrSold + LogGrLivArea + LogWoodDeckSF +LogScreenPorch + 
+                 LogLotArea + LogMasVnrArea, data = lr_model_bk)
+
 # summary(model_bk)
 hdata$SalePrice = as.numeric(NA)
 hdata$lSalePrice = as.numeric(NA)
 BWPred <- predict(model_bk, interval = "predict", newdata = hdata, na.action = na.omit)
+
 BWPrediction <- data.frame(cbind(hdata$Id, exp(BWPred[,1])))
+
 names(BWPrediction) <- c("ID", "SalePrice")
+
 # write.csv(BWPrediction, file = "./BWPred.csv", row.names = FALSE)
 # kaggle score .42936
 # rsquare .8826054
 # adj. r square .8811288
 # pred r square .8787318
 # cv press 28.06264
+```
+
+Backward Selection Performance Stats:
+```{r}
 # BACKWARD PERFORMANCE STATS:
+
+
 pred_r_squared <- function(linear.model) {
-#' Use anova() to get the sum of squares for the linear model
-lm.anova <- anova(linear.model)
-#' Calculate the total sum of squares
-tss <- sum(lm.anova$'Sum Sq')
-# Calculate the predictive R^2
-pred.r.squared <- 1-PRESS(linear.model)/(tss)
-return(pred.r.squared)
+  #' Use anova() to get the sum of squares for the linear model
+  lm.anova <- anova(linear.model)
+  #' Calculate the total sum of squares
+  tss <- sum(lm.anova$'Sum Sq')
+  # Calculate the predictive R^2
+  pred.r.squared <- 1-PRESS(linear.model)/(tss)
+  
+  return(pred.r.squared)
 }
+ 
+
 PRESS <- function(linear.model) {
-#' calculate the predictive residuals
-pr <- residuals(linear.model)/(1-lm.influence(linear.model)$hat)
-#' calculate the PRESS
-PRESS <- sum(pr^2)
-return(PRESS)
+  #' calculate the predictive residuals
+  pr <- residuals(linear.model)/(1-lm.influence(linear.model)$hat)
+  #' calculate the PRESS
+  PRESS <- sum(pr^2)
+  
+  return(PRESS)
 }
+
+
 model_fit_stats <- function(linear.model) {
-r.sqr <- summary(linear.model)$r.squared
-adj.r.sqr <- summary(linear.model)$adj.r.squared
-pre.r.sqr <- pred_r_squared(linear.model)
-PRESS <- PRESS(linear.model)
-return.df <- data.frame(r.squared = r.sqr, adj.r.squared = adj.r.sqr, pred.r.squared = pre.r.sqr, press = PRESS)
-return(return.df)
+  r.sqr <- summary(linear.model)$r.squared
+  adj.r.sqr <- summary(linear.model)$adj.r.squared
+  pre.r.sqr <- pred_r_squared(linear.model)
+  PRESS <- PRESS(linear.model)
+  return.df <- data.frame(r.squared = r.sqr, adj.r.squared = adj.r.sqr, pred.r.squared = pre.r.sqr, press = PRESS)
+  return(return.df)
 }
 pred_r_squared(model_bk)
+
 PRESS(model_bk)
+
 AIC(model_bk)
+
 model_fit_stats(model_bk)
+
+```
